# IFQ

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: backend.yml  ios.yml  landing-page.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/tests/: test_main.py
docs/: BRAND.md  BRAND_TEMPLATE.md  DISTRIBUTION.md  ICP.md  IMPLEMENTATION_PLAN.md  POST_LAUNCH.md  PROJECT.md
ios-app/: CLAUDE.md  README.md
landing-page/: CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.ts
landing-page/supabase/: config.toml
prototyping/: CLAUDE.md  CONCEPT_NOTES.md  README.md
prototyping/color-1-acid/: index.html  styles.css
prototyping/color-2-bruised/: index.html  styles.css
prototyping/color-3-newsprint/: index.html  styles.css
prototyping/color-4-electric/: index.html  styles.css
prototyping/color-5-earthy/: index.html  styles.css
prototyping/exp-emerald/: styles.css
prototyping/exp-split-palette/: index.html  styles.css
prototyping/exp-textured/: styles.css
prototyping/exp-type-hero/: styles.css
prototyping/experiment-a-warm-black/: index.html  styles.css
prototyping/experiment-b-cream-base/: index.html  styles.css
prototyping/experiment-c-mschf-chaos/: index.html  styles.css
prototyping/palette-1-cream-navy/: styles.css
prototyping/palette-2-warm-sage/: styles.css
sprints/: SPRINT_01.md  SPRINT_02.md  SPRINT_03.md  SPRINT_04.md  SPRINT_05.md  SPRINT_06.md  SPRINT_07.md  SPRINT_08.md  SPRINT_09.md  SPRINT_10.md  SPRINT_11.md  SPRINT_12.md
(+28 files in other folders)
